--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-      <div id="">      
+            
         <header>
            <ul>
               <li><img src="images/Frame.png"></li>
@@ -27,16 +27,317 @@
            </ul> 
         </header>
         <div id="image">
+          <div class="texte-grande-image">
             <ul>
               <li><h1>iPhone 14 Pro</h1></li>
               <li>Pro. Plus ultra.</li>
             </ul>
-            <div id="iphone14">
+            <div class="beetween">
               <a href="">En savoir plus</a>
               <a href="">Acheter</a>
-            </div>                      
+            </div>
+          </div>                        
         </div>
+        <div id="image2">
+          <div class="texte-grande-image">
+            <ul>
+              <li><h1>iPhone 14</h1></li>
+              <li>Un grand. Avec un grand Plus.</li>
+            </ul>
+            <div class="beetween">
+              <a href="">En savoir plus</a>
+              <a href="">Acheter</a>
+            </div>
+          </div>
+        </div>
+        <div id="image3">
+          <div class="texte-grande-image">
+            <ul>
+              <li><img src="images/h4.png"/></li>
+              <li style="color: white;">Plus en forme que jamais.</li>
+            </ul>
+            <div class="beetween">
+              <a href="">En savoir plus</a>
+              <a href="">Acheter</a>
+            </div>
+          </div>
+        </div>
+        <div class="inline"><!-- cette div correspond à la ligne ipad et mac book pro sa classe prendra la valeur de sorte à alligner les différentes div--> 
+          <div id="image4" class="background"><!--cette div correspond à la case de l'ipad et son id prendra une valeur pour y mettre le background -->
+            <div class="texte-petite-image black">
+              <ul>
+                <li><h1>iPad</h1></li>
+                <li>Vos idées. Sa magie. Du génie.</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Acheter</a>
+              </div>
+            </div>
+          </div>
+          <div id="image5" class="background"><!-- cette div correspond à la case du mac book pro-->
+            <div class="texte-petite-image">
+              <ul>
+                <li><h1>MacBook Pro</h1></li>
+                <li>Boosté par les puces M2 Pro et M2 Max</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Acheter</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="inline"><!--cette div correspond à la ligne de l'enceinte et des écouteurs-->
+          <div id="image6" class="background"><!--enceinte Homepod-->
+            <div class="texte-petite-image">
+              <ul>
+                <li><h1>HomePod</h1></li>
+                <li>Virtuose du son.</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Acheter</a>
+              </div>
+            </div>
+          </div>
+          <div id="image7" class="background"><!--AirPods Pro-->
+            <div class="texte-petite-image">
+              <ul>
+                <li><h1>AirPods Pro</h1></li>
+                <li>Le son. Nouvelle définition.</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Acheter</a>
+              </div>
+            </div>  
+          </div> 
+        </div>
+        <div class="inline"><!--Ftness+ et créativité et communauté.-->
+          <div id="image8" class="background"><!--Fitness+-->
+            <div class="texte-petite-image black dif">
+              <ul>
+                <li><img src="images/h4-Fitness+.png"></li>
+                <li>Cette année,c'est votre année.</br>Il vous suffit d'un iPhone.</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Essai gratuit<sub>1</sub></a>
+              </div>
+            </div>
+          </div>
+          <div id="image9" class="background"><!--Créativité et communauté Profondément liées-->
+            <div class="texte-petite-image dif2">
+              <ul>
+                <li><h1>Créativité et</br> communauté.</br>Profondément liées.</h1></li>
+                <li>Découvrez le nouveau bracelet</br> Black Unity et son cadran assorti.</li>
+              </ul>
+              <div class="beetween">
+                <a href="">En savoir plus</a>
+                <a href="">Acheter</a>
+              </div>
+            </div>  
+          </div> 
+        </div>
+        <div class="inline margin0"><!--ligne apple tv-->
+          <div id="image10" class="background2"><!--image foundation-->
 
-      </div>
+          </div>
+          <div id="image11" class="background3"><!--image liaison-->
+            <div class="alignement">
+              <div id="--logo"><!--logo regarder-->
+                <a href="">Regarder</a>
+              </div>
+                <div class="alignement white">
+                  <b>Thriller</b>
+                  <ul class="decoration">
+                    <li>Jusqu'au bout, à n'importe quel prix</li>
+                  </ul>
+                </div>
+            </div>
+          </div>
+          <div id="image12" class="background2"><!--image SHA-->
+
+          </div>
+        </div>
+        <div id="ligne-point"><!--ligne de point-->
+          <div id="point-noir"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+          <div class="point-clair"></div>
+        </div>
+        <div id="long-texte"><!--texte de bas de page-->
+          <div id="largeur-texte">
+            <div id="paragraphe">
+              <p><!--il faudra indenter la première ligne en css-->
+                Apple Fitness+ nécessite un iPhone 8 (ou modèle ultérieur) ou une Apple Watch Series 3 (ou modèle ultérieur) jumelée à un iPhone 6s (ou modèle ultérieur). Nouvelles</br>
+                personnes abonnées uniquement. 9,99 €/mois après l’essai gratuit. L’abonnement est automatiquement reconduit s’il n’est pas résilié. Soumis à <span class="souligné">conditions</span>.
+              </p>
+              <p>
+                Les séances d’exercice et de méditation Apple Fitness+ sont en anglais. Des sous-titres sont disponibles en français, espagnol, allemand, italien, russe et portugais du Brésil.
+              </p>
+              <p>
+                Un abonnement est requis pour Apple Fitness+.
+              </p>
+              <p>
+                Apple Fitness+ nécessite un iPhone 8 (ou modèle ultérieur) avec iOS 16.1 (ou version ultérieure), ou une Apple Watch Series 3 (ou modèle ultérieur) avec watchOS 7.2 (ou version</br>
+                ultérieure) jumelée à un iPhone 6s (ou modèle ultérieur) avec iOS 14.3 (ou version ultérieure).
+              </p>
+              <p>
+                L’app Forme sur Apple TV nécessite tvOS 14.3 (ou version ultérieure).
+              </p>
+              <p>
+                L’app Forme sur iPad nécessite iPadOS 14.3 (ou version ultérieure).
+              </p>
+              <p>
+                Pour profiter des toutes dernières fonctionnalités, vérifiez que la version logicielle la plus récente est installée sur vos appareils.
+              </p>
+            </div>
+            <div id="information"><!--liste d'information sous la zone de texte-->
+              <div><!--première collone-->
+                <div class="margin-liste">
+                  <ul>
+                    <li><b>S'informer et acheter</b></li>
+                    <li>store</li>
+                    <li>Mac</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                    <li>Watch</li>
+                    <li>AirPods</li>
+                    <li>TV & Maison</li>
+                    <li>AirTag</li>
+                    <li>Accessoires</li>
+                    <li>Cartes Cadeaux</li>
+                  </ul>
+                </div>
+                <div>
+                  <ul>
+                    <li><b>Apple Cartes</b></li>
+                    <li>Apple Pay</li>
+                  </ul>
+                </div>
+              </div>
+              <div ><!--deuxième colonne-->
+                <div class="margin-liste">              
+                  <ul>
+                    <li><b>Compte</b></li>
+                    <li>Gérer votre identifiant Apple</li>
+                    <li>Compte Apple Store</li>
+                    <li>Cloud.com</li>
+                  </ul>
+                </div>             
+                <ul>
+                  <li><b>Divertissements</b></li>
+                  <li>Apple One</li>
+                  <li>Apple TV+</li>
+                  <li>Apple Music</li>
+                  <li>Apple Arcade</li>
+                  <li>Apple fitness+</li>
+                  <li>Apple podcasts</li>
+                  <li>Apple Books</li>
+                  <li>App Store</li>
+                  </ul>             
+              </div>
+              <div><!--troisième colonne-->
+                <ul>
+                  <li><b>Apple Store</b></li>
+                  <li>Trouver un apple Store</li>
+                  <li>Genius Bar</li>
+                  <li>Today at apple</li>
+                  <li>Stage d'été apple</li>
+                  <li>App Apple Store</li>
+                  <li>Produit reconditionnés et</br>soldés</li>
+                  <li>Apple Trade in</li>
+                  <li>État de votre commande</li>
+                  <li>Aide à l’achat</li>
+                </ul>
+              </div>
+              <div><!--quatrième colonne-->
+                <div class="margin-liste">
+                  <ul>
+                    <li><b>Pour les entreprises</b></li>
+                    <li>Apple et les entreprises</li>
+                    <li>Acheter pour votre entreprise</li>
+                  </ul>
+                </div>
+                <div class="margin-liste">  
+                  <ul>
+                    <li><b>Pour l'Éducation</b></li>
+                    <li>Apple et l'Éducation</li>
+                    <li>Acheter pour l’université</li>
+                  </ul>
+                </div>  
+                <ul>
+                  <li><b>Pour la santé</b></li>
+                  <li>Apple dans le secteur de la santé</li>
+                  <li>La santé sur Apple Watch</li>
+                </ul>
+              </div>
+              <div><!--cinquième colonne-->
+                <div class="margin-liste">
+                  <ul>
+                    <li><b>Valeurs d'Apple</b></li>
+                    <li>Accessibilité</li>
+                    <li>Éducation</li>
+                    <li>Environnement</li>
+                    <li>Confidentialité</li>
+                    <li>Responsabilité des</br> fournisseurs</li>
+                  </ul>
+                </div>
+                <ul>
+                  <li><b>À propos d’Apple</b></li>
+                  <li>Newsroom</li>
+                  <li>Direction d’Apple</li>
+                  <li>Travailler chez Apple</li>
+                  <li>Garantie</li>
+                  <li>Investisseurs</li>
+                  <li>Éthique et conformité</li>
+                  <li>Évènements</li>
+                  <li>Création d’emplois en Europe</li>
+                  <li>Contacter Apple</li>
+                </ul>
+              </div>
+            </div>
+            <div><!--dernière section de texte de la page-->
+              <div class="inline-no-margin">
+                <div class="info">
+                  Vous pouvez aussi faire vos achats <span class="souligné blue"><a href="">dans un Apple Store</a></span> ou <span class="souligné blue"><a href="">chez un revendeur</a></span>.
+                </div>
+                <div>
+                  Ou appeler le 0800 046 046.
+                </div>    
+              </div>
+              <div id="copyright">
+                <div>
+                  Copyright © 2023 Apple Inc. Tous droits réservés.
+                </div>
+                <div>
+                  France
+                </div>
+              </div>
+              <div><!--dernière liste de la page-->
+                <ul class="end-flex">
+                  <li>Engagement de confidentialité</li>
+                  <li>Utilisation des cookies</li>
+                  <li>Conditions d’utilisation</li>
+                  <li>Ventes et remboursements</li>
+                  <li>Mentions légales</li>
+                  <li>Plan du site</li>
+                </ul>
+              </div>
+            </div>
+          </div>  
+        </div>
     </body>
 </html>
